# necthrall

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  batch_benchmark.py  batch_benchmark_results.json  benchmark_agent_comparison_results.json  config.py  debug_chunker.py  debug_openalex_output.txt  main.py  pdf_test_extraction.py  pdf_test_search.py  performance_baseline.json  performance_log.json  pyproject.toml  pytest.ini  pytest_output.txt  requirements.txt  state_schema_documentation.md  test_data.json  test_output.txt  week2_performance_validation.json
.deepeval/: .deepeval_telemetry.txt
.github/: copilot-instructions.md
.nicegui/: storage-user-304a5539-485e-42a5-8c19-b6aaec62a41b.json
agents/: __init__.py  acquisition.py  acquisition_agent.py  analysis.py  deduplication_agent.py  fallback_refinement_agent.py  filtering_agent.py  processing.py  processing_agent.py  processing_agent_legacy.py  quality_gate.py  query_optimization_agent.py  ranking_agent.py  search.py  semantic_scholar_client.py  synthesis_agent.py
config/: __init__.py  _threading.py  config.py  embedding_config.py  onnx_embedding.py  prompts.py
docs/: torch_dll_fix.md  week1_completion_summary.md  week2_complete.md  week2_performance.md  windows_performance_fix.md
models/: __init__.py  state.py
monitoring/: health.py
notebooks/: Untitled.ipynb
orchestrator/: graph.py
prompts/: analysis_prompts.py
rag/: __init__.py  chunking.py  embeddings.py
retrieval/: __init__.py  hybrid_retriever.py  llamaindex_retriever.py  reranker.py
scripts/: analyze_test_categories.py  benchmark_agent_comparison.py  benchmark_week2_performance.py  check_abstract_availability.py  check_env.py  check_hf_embed.py  check_imports.py  check_sbert.py  collect_openalex_stats.py  debug_embedding_call.py  debug_openalex_diagnostics.py  debug_openalex_response.py  debug_pdf_availability.py  debug_pop_query.py  debug_processing_run.py  diagnose_onnx.py  embedding_demo.py  generate_golden_dataset.py  generate_test_data.py  inspect_llama_embeddings.py  performance_test.py  performance_test_script.py  performance_validation.py  quick_performance_test.py  run_llm_test.py  run_memory_test.bat  run_semantic_scholar_client.py  sanity_check.py  semantic_download.py  setup_onnx.py  show_recommended_models.py  test_docker_memory.ps1  test_docker_memory.sh  test_embed_speed.py  test_end_to_end_pipeline.py  test_hybrid_normalization.py  test_memory_local.ps1  test_memory_local.sh  test_necthrall_real.py  test_onnx_performance.py  (+8 more)
searches/: New Tekstdocument.txt  digital media usage psychiatric symptoms self-esteem.json  social media mental health impact.json  social media psychological well-being depression anxiety adolescent.json
services/: __init__.py  discovery_service.py  exceptions.py  ingestion_service.py  job_manager.py  query_service.py  rag_service.py
tests/: citation_metrics.py  conftest.py  eval_config.py  fixtures.py  test_acquisition_agent.py  test_acquisition_agent_v2.py  test_analysis.py  (+35 more)
(+77 files in other folders)
